@@ -1,0 +1,1 @@
+The test.dsl LingvoDSL dictionary is made for test by OmegaT project and is under the GPL.
